# mnist-handwritten-digit-recognition-project

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SUPPORT.md  hand-written-digit-recognition_final copy.ipynb  hand-written-digit-recognition_final.ipynb  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: update-license-year.yml
notebooks/: demo.ipynb
src/mnist_recognition/: __init__.py  config.py
src/mnist_recognition/data/: augmentation.py  feature_selection.py  loader.py  preprocessing.py
src/mnist_recognition/evaluation/: error_analysis.py  metrics.py  report.py
src/mnist_recognition/models/: basic_mlp.py  deep_cnn.py  optimized.py
src/mnist_recognition/visualization/: comparison.py  sensitivity.py  training.py
